--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>reMarkable 2 — Dispositivo IPO</title>
+  <title>reMarkable 2 — IPO</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
     <h1>reMarkable 2</h1>
     <p class="tagline">Tablet de tinta electrónica diseñada para escribir y leer como si fuera una hoja de papel.</p>
+
+    <figure class="header-image">
+      <img src="stylus.png"
+           alt="Stylus Marker del reMarkable 2">
+    </figure>
+
     <nav class="topnav">
       <a href="#que-es">¿Qué es?</a>
       <a href="#por-que">Por qué lo incluí</a>
@@ -22,60 +28,66 @@
   <main class="content">
     <section id="que-es">
       <h2>¿Qué es el reMarkable 2?</h2>
-      <p><strong>reMarkable 2</strong> es una <em>tablet "papel"</em> de 10.3" pensada para la toma de notas, la lectura y el dibujo. Ofrece una experiencia de escritura que intenta replicar la sensación física del papel manteniendo las ventajas digitales (sin distracciones de aplicaciones).</p>
+      <p><strong>reMarkable 2</strong> es una <em>tablet "papel"</em> pensada para la toma de notas, la lectura y el dibujo. Ofrece una experiencia de escritura que replica la sensación del papel manteniendo las ventajas digitales, sin distracciones de aplicaciones.</p>
       <ul class="specs">
-        <li>Pantalla digital "Canvas" 10.3" E Ink, 1872 × 1404 (226 DPI).</li>
-        <li>Dimensiones: 187 × 246 × 4.7 mm; peso ≈ 403.5 g.</li>
-        <li>Sistema: reMarkable OS (Linux-based). Handwriting-to-text con MyScript.</li>
-        <li>Conectividad: Wi-Fi (2.4/5 GHz), USB-C. Batería ≈ 3000 mAh (hasta 2 semanas de uso según fabricante).</li>
+        <li>Pantalla digital 10.3" E Ink, 1872 × 1404.</li>
+        <li>Dimensiones: 187 × 246 × 4.7 mm. Peso de menos de 400gr!</li>
+        <li>Sistema: reMarkable OS (basado en Linux). Conversión de escritura a texto con MyScript.</li>
+        <li>Conectividad: Wi-Fi, USB-C. Batería de hasta 2 semanas de uso.</li>
       </ul>
     </section>
 
     <section id="por-que">
       <h2>Por qué lo he incluido (beneficios para la accesibilidad y relación con la IPO)</h2>
-      <p><strong>Interacción persona-ordenador (IPO):</strong> reMarkable 2 mejora la forma en que las personas escriben, dibujan y organizan información digital sin renunciar a la ergonomía del papel. Sus beneficios principales:</p>
+      <p><strong>Interacción Persona-Ordenador (IPO):</strong> el reMarkable 2 destaca como ejemplo actual de cómo la tecnología puede adaptarse al ser humano, y no al revés. Este dispositivo replantea la experiencia digital desde un punto de vista centrado en la naturalidad de la interacción.</p>
       <ol>
-        <li><strong>Experiencia táctil muy parecida al papel:</strong> la superficie y el marcador ofrecen fricción y latencia baja orientada a la escritura y el dibujo, lo que facilita entrada directa y natural mediante lápiz. Esto mejora la expresión gráfica y la captura de ideas a mano alzada, fundamentales en muchos procesos de diseño y toma de decisiones. Además ayuda a gente mayor sin experiencia con dispositivos electrónicos a iniciarse en este mundo al tener una interfaz tremendamente sencillad de usar.</li>
-        <li><strong>Reducción de distracciones:</strong> la interfaz minimalista, ausencia de funciones como apps y navegador web y la ausencia de notificaciones favorecen la concentración y un ritmo de trabajo sin interrupciones, un aspecto clave para personas que pueden tener trastornos o defecits relacionados con la atención y productividad.</li>
-        <li><strong>Flujos papel-digital:</strong> permite importar/editar PDFs, convertir escritura a texto y sincronizar con apps, lo que combina lo mejor de los dos soportes y le da al usuario elección dependiendo de sus preferencias.</li>
-        <li><strong>Accesibilidad y ergonomía:</strong> solo se puede leer con luz solar (sin brillo, lo que contribuye al bienestar ocular), tiene modos para zurdos y opciones de plantillas que adaptan la experiencia a distintos perfiles.</li>
+        <li><strong>Experiencia táctil parecida al papel:</strong> la superficie y el marcador ofrecen fricción y latencia muy baja, lo que facilita la escritura y el dibujo natural. Esto reduce la curva de aprendizaje y promueve la interacción directa sin intermediarios complejos.</li>
+        <li><strong>Reducción de distracciones:</strong> la interfaz minimalista sin redes sociales ni notificaciones favorece la concentración, algo especialmente útil para personas con déficit de atención o que necesitan un entorno de trabajo más enfocado.</li>
+        <li><strong>Flujos papel-digital:</strong> permite importar, anotar y sincronizar documentos en la nube, combinando lo mejor del mundo físico y el digital. Así mejora la usabilidad y eficiencia en entornos educativos y laborales.</li>
+        <li><strong>Accesibilidad y ergonomía:</strong> gracias a su pantalla sin brillo y adaptable para zurdos, facilita el uso prolongado sin fatiga visual. También se adapta a usuarios con poca experiencia tecnológica, al ofrecer una interacción directa y sin menús complejos.</li>
       </ol>
     </section>
 
     <section id="evolucion">
       <h2>Evolución y a qué sustituye</h2>
-      <p>reMarkable 2 es la evolución de la primera generación (reMarkable 1) y forma parte de un gran grupo de dispositivos con pantallas de tinta electrónica que pretenden sustituir cuadernos y hojas impresas. Respecto a su anterior tablet y otros competidores:</p>
+      <p>El reMarkable 2 es la evolución del modelo original (reMarkable 1) y forma parte del avance de los dispositivos de tinta electrónica que buscan sustituir el papel tradicional. Frente a su antecesor y a competidores como Kobo o Kindle Scribe, ofrece:</p>
       <ul>
-        <li>Es más delgada y ligera; anunciada como "la tablet más delgada del mundo" (4.7 mm).</li>
-        <li>Mejor autonomía de batería y mejoras en el hardware y el lapiz.</li>
-        <li>Software más pulido y sincronización con apps de almacenamiento en la nube para acceder a tus archivos (aunque mantiene diseño enfocado en la ausencia de distracciones).</li>
+        <li>El diseño más delgado y ligero (4.7 mm, “la tablet más fina del mundo”).</li>
+        <li>Mejor autonomía, latencia reducida y lápiz con mayor sensibilidad a la presión, casi como si fuera papel.</li>
+        <li>Software más fluido, sincronización en la nube y conversión manuscrita más precisa.</li>
+        <li>Mayor enfoque en la interacción centrada en el usuario, manteniendo su enfoque minimalista.</li>
       </ul>
     </section>
 
     <section id="fotos">
       <h2>Fotos</h2>
       <figure>
-        <img src="https://cdn.sanity.io/images/xpujt61d/production/cf35bc7b1ac183cdbca2a5024582d91abc8a9ec4-2600x2367.png?w=1024&fm=webp&sharp=20&q=42&dpr=2" alt="reMarkable 2 con Marker (Wikimedia Commons)">
-        <figcaption>reMarkable 2 con Marker</figcaption>
+        <img src="https://cdn.sanity.io/images/xpujt61d/production/cf35bc7b1ac183cdbca2a5024582d91abc8a9ec4-2600x2367.png?w=1024&fm=webp&sharp=20&q=42&dpr=2" alt="reMarkable 2">
+        <figcaption>reMarkable 2</figcaption>
       </figure>
+
+      <figure>
+        <img src="https://cdn.sanity.io/images/xpujt61d/production/98cf7c861a464c5a4335562321b75e8d889ab243-1268x1268.png?w=775&fm=webp&sharp=20&q=42&dpr=2" alt="Conectividad reMarkable 2">
+        <figcaption>Conectividad reMarkable 2</figcaption>
+      </figure>
+     
     </section>
 
     <section id="mas-info">
       <h2>Más información y fuentes</h2>
-      <p>Si quieres leer especificaciones, comprar o ver documentación oficial, visita la página oficial:</p>
-      <p><a href="https://remarkable.com/products/remarkable-2" target="_blank" rel="noopener">reMarkable 2 (página oficial)</a></p>
+      <p>Consulta las especificaciones completas en la web:</p>
+      <p><a href="https://remarkable.com/products/remarkable-2" target="_blank" rel="noopener">Sitio oficial de reMarkable 2</a></p>
 
-      <h3>Fuentes y lecturas recomendadas</h3>
+      <h3>Fuentes recomendadas</h3>
       <ul>
-        <li>Ficha oficial y especificaciones: reMarkable (página del producto).</li>
-        <li>Artículos y reseñas (Wired, TechRadar) que analizan la experiencia de escritura y las limitaciones frente a tablets generales.</li>
-        <li>Wikipedia / Wikimedia Commons para historia y recursos de imagen con licencia.</li>
+        <li>Ficha técnica oficial: reMarkable.com</li>
+        <li>Reseñas y comparativas: Wired, TechRadar, The Verge.</li>
       </ul>
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>Daniel García López - IPO</p>
+    <p>Daniel García López — IPO</p>
   </footer>
 </body>
 </html>
